# Enscribe

./: .dockerignore  .editorconfig  .gitignore  README.md  docker-compose.yml  dockerfile  frontend-docs.md  mkdocs.yml  run.sh
.github/workflows/: main.yml
app/: entrypoint.sh  manage.py
app/backend/: models.py  urls.py  utils.py
app/static/: canvas_drawing.js  main_app.js
app/templates/: layering_demo.html  main_app.html
app/thesite/: asgi.py  urls.py  wsgi.py
backend/: app.py  dockerfile  entrypoint.sh  jest.config.mjs  package-lock.json  package.json  pyproject.toml
backend/backend/: forms.py  models.py  urls.py  utils.py  views.py
backend/backend/migrations/: 0002_lineprediction_characterimage_toppredictions_and_more.py  0003_remove_toppredictions_image_toppredictions_position_and_more.py  0004_rename_lineprediction_codeblockprediction_and_more.py  0005_delete_image.py  0005_notebook_remove_characterprediction_prediction_set_and_more.py  0006_alter_notebook_notebook_modified_at.py
backend/backend/tests/: test_views.py
backend/docs/: mkdocs.yml
backend/static/: canvas_drawing.js  code_block.css  common.css  login_register.css  main_app.css  main_app.js  radio_panel.css  stylesheet.css
backend/static/modules/: code-block.mjs  notebook.mjs  radio-panel.mjs  reactivity.mjs  shapeUtils.mjs  shapeUtils.test.mjs  undo-redo.mjs  undo-redo.test.mjs  whiteboard.mjs
backend/templates/: canvas_drawing.html  code.html  home.html  index.html  layering_demo.html  main_app.html
backend/templates/registration/: login.html  register.html
backend/thesite/: settings.py  urls.py
backend/thesite/appl/: urls.py  views.py
backend/thesite/thesite/: settings.py  urls.py
docs/: forms.md  frontend.md  index.md  models.md  urls.md  utils.md  views.md
frontend/: index.html
kernels/: dockerfile
playwright/tests/: application-toolbar.spec.js  notebook-toolbar.spec.js  writing.spec.js
(+1 files in other folders)
