[tool.poetry]
name = "4yp-backend"
version = "0.1.0"
description = "Backend service for \"A Team Name\"'s 4th year project"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.4"
gunicorn = "^23.0.0"
python-dotenv = "^1.0.1"
whitenoise = "^6.8.2"
websocket-client = "^1.8.0"
pillow = "^11.0.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.9"
pre-commit = "^4.0.1"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
